..F....... [ZBXNEXT-2073] updated jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new parameter 'User' to daemon configuration that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
..F....... [ZBX-7553] fixed graph not getting period when coming from screen (Krists)
....I..... [ZBX-7890] fixed broken make distclean (Nikolaj)
A......... [ZBX-7981] fixed validation when renaming host to an existing template in host.massupdate; fixed validation when renaming template to an existing host in template.massupdate (Ivo)
..F....... [ZBX-7436] changed string "comment" to "description" in trigger list and trigger comments (Krists)
..F....... [ZBX-8159] fixed missing history bar when viewing or editing trigger descriptions (Krists)
A......... [ZBX-7949] fixed inherited graph and graph prototype case insensitive name comparison (Ivo)
.......PS. [ZBX-7534] removed the limit of dservice value (Nikolaj)
A......... [ZBX-8132] fixed image.get not properly returning all images for sysmaps (Krists)
...G...... [ZBX-8108] fixed reading /proc virtual files without rewinding the file position (Juris)
...G...... [ZBX-5243] increased the length of program name and command line that proc.mem[] and proc.num[] can match on AIX; thanks to Boris Manojlovic for patch (asaveljevs)
...G...... [ZBX-7448] fixed Windows agents limit check (Nikolaj, wiper)
..F....... [ZBX-7335] improved element copy dialog by having hosts, templates and host group in separate target types and empty groups are not shown (Krists)
.......PS. [ZBX-3336] fixed autodiscovery rule doesn't clear/rescan hosts in dhosts/dservices (Nikolaj)
..F....... [ZBX-6497] improved frontend filters, Filter and Reset now is submit buttons, removed JS form reset scripts, changed filter data saving process in profiles (Oleg)